chores: * adapting API to a more standardized pattern (RestFUL concepts) * adding bare-minimum observability in-loco for service layer * fixing minor code-smells * adding pagination on readings and pricing endpoint * updating documentation and adding JavaDocs to Record classes * adapting acceptance tests to changed endpoints